<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweeter</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_label">Connect To Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_tweet">Tweet</string>
    <string name="et_tweet">What\'s happening?</string>
    <string name="action_compose">Compose</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="back">Back</string>
    <string name="activity_tweet">Tweet</string>
    <string name="compose_save_draft">Do you wish to save a draft?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="tab_home_title">Home</string>
    <string name="tab_mentions_title">Mentions</string>
    <string name="action_profile">Profile</string>
    <string name="tv_followings"><b>%1$d Following</b></string>
    <string name="tv_followers"><b>%1$d Followers</b></string>
    <string name="title_followers">Followers</string>
    <string name="title_followings">Following</string>
    <string name="title_progress">Loading...</string>
    <string name="search_title">Search</string>
    <string name="title_search_results">Search Results For: %1$s</string>
    <string name="title_messages">Messages</string>
    <string name="tab_messages_sent">Sent</string>
    <string name="tab_messages_received">Received</string>
    <string name="message_compose_send">Send</string>
    <string name="message_compose_user">To Screen Name...</string>
    <string name="message_compose_body">Enter a message...</string>

</resources>