<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ibCancel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_close"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ibCancel"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textColor="@color/tweetMisc"
            android:text="\@"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvUserName"
            android:layout_toRightOf="@+id/tvUserName"
            android:layout_toEndOf="@+id/tvUserName"
            android:layout_marginTop="10dp"
            android:textColor="@color/tweetBody"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="textPersonName"
            android:hint="@string/message_compose_user"
            android:gravity="left">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etUserName"
            android:layout_marginTop="15dp"
            android:textColor="@color/tweetBody"
            android:ems="10"
            android:textSize="18sp"
            android:inputType="textMultiLine"
            android:hint="@string/message_compose_body"
            tools:text="12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        </EditText>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_no_border"
            android:textColor="@color/buttonTextColor"
            android:text="@string/message_compose_send"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/etBody"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/pbLoading"
            android:layout_alignLeft="@+id/btnSend"
            android:layout_alignStart="@+id/btnSend"
            android:layout_alignTop="@+id/btnSend"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>